Fix layout shift when navigating to short pages

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 /* Base */
 html {
   height: 100%;
+  scrollbar-gutter: stable;
 }
 
 body {
